--- a/scss/style.scss
+++ b/scss/style.scss
@@ -66,10 +66,16 @@ html, body {
   color: $font-color_default;
   font-size: $font-size_default;
   font-family: $font-family_corp;
+  scroll-behavior: auto;
 }
 
 p, a {
   -webkit-font-smoothing: antialiased;
+}
+
+.congratulations {
+  font-size: 4vw;
+  padding: $font-size_l;
 }
 
 a {
@@ -104,12 +110,36 @@ body {
   scroll-behavior: smooth;
 }
 // ========================
+// ローディング画面
+// ========================
+.fade {
+  display: none;
+  width: $site-width;
+  height: 100%;
+  background-color: $color_background;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%, 0);
+  z-index: 3;
+  @include mq() {
+    width: 100%;
+  }
+  .loader {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+}
+// ========================
 // container
 // ========================
 .container {
   box-sizing: border-box;
   background-color: $color_background;
-  width: $site-width;
+  max-width: $site-width;
+  height: 100vh;
   margin-left: auto;
   margin-right: auto;
   text-align: center;
@@ -117,7 +147,6 @@ body {
   overflow: hidden;
   @include mq(){
     width: 100%;
-    height: 100vh;
   }
 }
 
@@ -137,7 +166,7 @@ body {
     font-size: $font-size_xxl;
   }
   @include mq(){
-    height: 20vh;
+    height: 17%;
     margin-bottom: 0;
     &-logo {
       height: 75%;
@@ -152,12 +181,11 @@ body {
 // View Screen
 // ========================
 .view {
-  height: 300px;
+  height: 28%;
   margin-bottom: $space_xl;
   position: relative;
   overflow: hidden;
   @include mq(){
-    height: 30%;
     margin-bottom: $space_m;
   }
   &-initial {
@@ -204,6 +232,7 @@ body {
     display: flex;
     justify-content: space-between;
     .character {
+      width: 55%;
       color: $font-color_dark;
       text-align: left;
       padding: $space_xxl;
@@ -220,30 +249,33 @@ body {
         line-height: $font-size_default + 4px;
       }
       &-face {
-        width: 300px;
         height: 100%;
-        margin-right: $space_xxl;
         object-fit: cover;
+        z-index: -1;
+        width: 50%;
+        position: absolute;
+        right: 0;
+        margin-right: 0;
       }
       @include mq() {
         width: 55%;
-        padding: $space_l;
+        padding: $space_m;
         &-nickname {
-          font-size: $font-size_s;
+          font-size: 4vw;
           margin-bottom: $space_s;
         }
         &-name {
-          font-size: $font-size_xl;
+          font-size: 10vw;
           margin-bottom: $space_m;
         }
         &-note {
-          font-size: $font-size_s;
+          font-size: 3.5vw;
+          line-height: 1.3em;
         }
         &-face {
           width: 50%;
           position: absolute;
           right: 0;
-          z-index: -1;
           margin-right: 0;
         }
       }
@@ -268,7 +300,7 @@ body {
   &-group {
     display: flex;
     justify-content: center;
-    height: 300px;
+    height: 25%;
     margin-right: -$space_s;
   }
   &-title {
@@ -294,11 +326,11 @@ body {
       margin-right: 0;
     }
     &-title {
-      font-size: $font-size_m;
+      font-size: 6vw;
       margin-bottom: $space_m;
     }
     &-text {
-      font-size: $font-size_s;
+      font-size: 4vw;
       margin-bottom: $space_m;
     }
     &-fighter {
@@ -322,7 +354,7 @@ body {
   position: relative;
   outline: none;
   @include mq() {
-    font-size: $font-size_m;
+    font-size: 6vw;
     padding: $space_m $space_l;
   }
   &-inactive {
@@ -340,6 +372,9 @@ body {
       animation: button 1s ease-out infinite;
     }
   }
+  &-start {
+    padding: $space_m $space_l;
+  }
   &-command {
     width: 25%;
     margin-right: $space_l;
@@ -352,7 +387,7 @@ body {
     }
     @include mq() {
       width: 30%;
-      margin-right: $space_m;
+      margin-right: $space_s;
     }
   }
   &-lethal {
@@ -386,11 +421,11 @@ body {
   }
   &-window {
     position: absolute;
-    top: 100px;
-    left: 0;
+    bottom: 35%;
     width: 100%;
+    height: 55%;
     .img {
-      height: 500px;
+      height: 100%;
       object-fit: contain;
       object-position: 50% -50%;
       z-index: 2;
@@ -404,6 +439,7 @@ body {
       background: -moz-radial-gradient(#69FF2A, #155419);
       background: -webkit-radial-gradient(#69FF2A, #155419);
       background: radial-gradient(#69FF2A, #155419);
+      height: auto;
     }
     .telop {
       color: $font-color_red;
@@ -420,15 +456,20 @@ body {
     @include mq() {
       bottom: 35%;
       .img {
-        height: auto;
+        height: 80%;
+        &.lethal {
+          height: 100%;
+          object-fit: contain;
+        }
       }
       .telop {
+        padding: $space_m;
         .nickname {
-          font-size: $font-size_m;
+          font-size: 5vw;
           margin-bottom: $space_m;
         }
         .name {
-          font-size: $font-size_xl;
+          font-size: 8vw;
         }
       }
     }
@@ -450,13 +491,12 @@ body {
 // 敵キャラ情報
 // ========================
 .battle-window {
-  height: 700px;
+  height: 60%;
   background-size: cover;
   position: relative;
   padding: 0 $space_l;
   overflow: hidden;
   @include mq() {
-    height: 65%;
     padding: 0 $space_s;
   }
   // 背景のぼかし
@@ -505,7 +545,7 @@ body {
     }
   }
   .history {
-    height: 180px;
+    height: 25%;
     position: absolute;
     bottom: 0;
     left: 0;
@@ -524,13 +564,13 @@ body {
       text-align: left;
     }
     @include mq() {
-      height: 18%;
+      height: 5em;
       margin-left: $space_s;
       margin-right: $space_s;
       padding: $space_s;
       &-text {
-        font-size: $font-size_s;
-        line-height: $font-size_default * 1.2;
+        font-size: 4vw;
+        line-height: 1.3em;
       }
     }
   }
@@ -608,6 +648,13 @@ body {
   &-face {
     width: 30%;
     position: relative;
+    overflow: hidden;
+    .img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      object-position: center;
+    }
     &.limit-break {
       background: -moz-radial-gradient(#69FF2A, #155419);
       background: -webkit-radial-gradient(#69FF2A, #155419);
@@ -616,11 +663,15 @@ body {
   }
   &-status {
     width: 70%;
-    padding-left: $space_l;
+    margin-left: $space_s;
     .about {
       display: flex;
       justify-content: space-between;
       height: 60%;
+      @include mq() {
+        height: auto;
+        padding-bottom: $space_s;
+      }
       .fighter {
         text-align: left;
         .nickname {
@@ -643,20 +694,21 @@ body {
       @include mq() {
         .fighter {
           .nickname {
-            font-size: $font-size_s;
+            font-size: 4vw;
             margin-bottom: $space_s;
           }
           .name {
-            font-size: $font-size_l;
+            font-size: 7vw;
           }
         }
         .record {
           .number {
-            font-size: $font-size_xl;
-            .unit { font-size: $font-size_l;}
+            font-size: 10vw;
+            .unit { font-size: 5vw;}
+            margin-bottom: 0;
           }
           .index {
-            font-size: $font-size_s;
+            font-size: 4vw;
           }
         }
       }
@@ -665,6 +717,7 @@ body {
       display: flex;
       justify-content: space-between;
       align-items: center;
+      text-align: left;
       position: relative;
       margin-bottom: $space_l;
       .index {
@@ -676,9 +729,7 @@ body {
       .parameter {
         margin-bottom: $space_s;
         .index {
-          text-align: left;
-          width: 25%;
-          font-size: $font-size_m;
+          font-size: 5vw;
         }
       }
     }
@@ -689,29 +740,30 @@ body {
 // ========================
 .effect-attack {
   position: absolute;
-  width: 100px;
+  width: 30%;
+  top: 40%;
+  left: 50%;
   opacity: 0;
+  transform: translate(-50%, -50%) rotate(-150deg);
   filter: blur(2px);
-  transition: .3s;
-  &.left {
-    top: 50%;
-    left: 10%;
-    transform: rotate(-160deg);
-    &.attacked {
-      transform: translate(300%, -150%) scale3d(2, 2, 2) rotate(20deg);
-      filter: blur(0);
-      opacity: 1;
-    }
+  &.attacked {
+    animation: punch .3s ease-out;
   }
-
+}
+@keyframes punch {
+  from { transform: translate(-50%, -50%) scale3d(1, 1, 1) rotate(-150deg); filter: blur(2px); opacity: 0 }
+  60% {transform: translate(-50%, -50%) scale3d(1.2 ,1.2, 1.2) rotate(-30deg); filter: blur(1px); opacity: 0.9}
+  70% {transform: translate(-50%, -50%) scale3d(2, 2, 2); filter: blur(0); opacity: 1 }
+  to {transform: translate(-50%, -50%) scale3d(2, 2, 2); filter: blur(0); opacity: 1 }
 }
 // ========================
 // フッター
 // ========================
 .footer {
   width: 100%;
-  height: 100px;
+  height: 8%;
   text-align: center;
+  position: relative;
   .link_anime {
     font-size: $font-size_m;
     display: block;
@@ -722,16 +774,20 @@ body {
   }
   .link_start {
     font-size: $font-size_m;
-    margin-top: $space_m;
+    position: absolute;
+    top: $space_m;
+    left: 50%;
+    transform: translate(-50%);
   }
   @include mq(){
     height: 8%;
     .link_anime {
-      font-size: $font-size_s;
+      font-size: 4vw;
       white-space: nowrap;
     }
     .link_start {
-      font-size: $font-size_s;
+      font-size: 4vw;
+      top: $space_s;
     }
   }
 }
